# ROC_PracticalTask

./: README.md
task_1_transputer_matrix_MPI/: CMakeLists.txt  main.cpp
task_2_fault_tolerance/: CMakeLists.txt
task_2_fault_tolerance/MPI_Version/: fdtd-2d.c  fdtd-2d.h
task_2_fault_tolerance/MPI_Version_fault_tolerance/: fdtd-2d.c  fdtd-2d.h
task_2_fault_tolerance/original_program/: fdtd-2d.c  fdtd-2d.h
